@@ -1,8 +1,0 @@
-#!/usr/bin/perl
-use strict;
-use warnings;
-use Test::More tests => 2;
-
-use_ok('WWW::Shorten::0rz');
-require_ok ('WWW::Shorten::0rz');
-
